--- a/index.pug
+++ b/index.pug
@@ -9,17 +9,26 @@ html(lang="en")
     body
         header
             nav.header__nav.wrapper
-                .header__logo
+                a(href="#").header__logo
                 ul
-                    li About us
-                    li Our focus
-                    li Portfolio
-                    li Our team
-                    li Work steps
-                    li Pricing
-                    li something
-                    li Blog
-                    li Contact
+                    li
+                        a About us
+                    li
+                        a Our focus
+                    li
+                        a Portfolio
+                    li
+                        a Our team
+                    li
+                        a Work steps
+                    li
+                        a Pricing
+                    li
+                        a something
+                    li
+                        a Blog
+                    li
+                        a Contact
             .header__slogan.wrapper
                 h1 We design things with love and passion
                 a(href="#portfolio")
